# sift

./: .gitignore  README.md  install.sh  pyproject.toml
.skill/: SKILL.md
.skill/references/: commands.md  research-loop.md  schemas.md
skills/: SKILL.md
skills/references/: commands.md  install.md  research-loop.md  schemas.md
skills/sift/: SKILL.md
skills/sift/references/: commands.md  install.md  research-loop.md  schemas.md
src/sift/: __init__.py  bootstrap.py  cache.py  cli.py  config_file.py  engines.py  fetcher.py  images.py  inputs.py  llm.py  llm_config.py  pretty.py  runner.py  serialize.py  synthesize.py
src/sift/data/: settings.yml
src/sift/research/: __init__.py  actions.py  embed_config.py  embeddings.py  events.py  loop.py  persist.py  prompts.py  tui.py  utils.py  writer.py
tests/: conftest.py  test_cache.py  test_config_cli.py  test_config_file.py  test_describe.py  test_fetch.py  test_fetch_prompt.py  test_help.py  test_images.py  test_inputs.py  test_live_crawl.py  test_live_llm.py  test_llm.py  test_llm_config.py  test_pretty.py  test_research_actions.py  test_research_cli.py  test_research_embeddings.py  test_research_events.py  test_research_loop.py  test_research_persist.py  test_research_tui.py  test_research_utils.py  test_research_writer.py  test_search_domain_filters.py  test_search_fetch_flag.py  test_search_stub.py  test_search_summary.py  test_settings_override.py  test_stdout_clean.py  test_synthesize.py  test_unknown_engine.py
